Implemented alert for send latency

--- a/html/index.html
+++ b/html/index.html
@@ -109,10 +109,11 @@
         "s_rot": "Screen rotation (0-3)",
         "s_brt": "Screen brightness, (0-15)",
         "snd": "Sound indication",
-        "alert_temp": "Alert Temperature",
-        "alert_hum": "Alert Humidity",
+        "alert_temp": "Alert Temperature, Cº",
+        "alert_hum": "Alert Humidity, %",
+        "alert_lat": "Alert Send Latency, s",
         "enabled": "Enabled",
-        "int": "Indication interval, ms",
+        "int": "Alert interval, ms",
         "min": "Min value",
         "max": "Max value",
     }
