Implemented delayed saving to prevent wasting resource of ESP32's Flash memory

--- a/html/index.html
+++ b/html/index.html
@@ -110,6 +110,7 @@
             "wifi_max_attempts": "Wi-Fi Max connection attempts",
             "upd_interval": "Sensors update interval, ms",
             "send_int": "Sensors sent interval, ms",
+            "save_int": "Settings save interval, ms",
             "s_rot": "Screen rotation (0-3)",
             "s_brt": "Screen brightness, (0-15)",
             "snd": "Sound indication",
