--- a/html/index.html
+++ b/html/index.html
@@ -48,6 +48,10 @@
             border-radius: .25rem
         }
 
+        .button[disabled] {
+            pointer-events: none;
+        }
+
         .button[data-saving=true], .input[data-saving=true] {
             animation: saving infinite 2s;
         }
@@ -207,6 +211,7 @@
         async function resetSettings(control) {
             try {
                 control.setAttribute("disabled", "true");
+                control.setAttribute("data-saving", "true");
                 control.innerText = "...";
                 await fetch("./reset", {method: "POST"});
             } finally {
@@ -217,6 +222,7 @@
         async function restart(control) {
             try {
                 control.setAttribute("disabled", "true");
+                control.setAttribute("data-saving", "true");
                 control.innerText = "...";
                 await fetch("./restart", {method: "POST"});
             } finally {
