Change method to calculate latency, retry sending if failed

--- a/html/index.html
+++ b/html/index.html
@@ -120,14 +120,14 @@
             "t_loop_delay": "Screen repeat delay, ms",
             "wifi_max_attempts": "Wi-Fi Max connection attempts",
             "upd_interval": "Sensors update interval, ms",
-            "send_int": "Sensors sent interval, ms",
+            "send_int": "Sensors send interval, ms",
             "save_int": "Settings save interval, ms",
             "s_rot": "Screen rotation (0-3)",
             "s_brt": "Screen brightness, (0-15)",
             "snd": "Sound indication",
             "alert_temp": "Alert Temperature, Cº",
             "alert_hum": "Alert Humidity, %",
-            "alert_lat": "Alert Send Latency, s",
+            "alert_lat": "Alert Send Latency, ms",
             "enabled": "Enabled",
             "int": "Alert interval, ms",
             "min": "Min value",
@@ -303,7 +303,7 @@
 <p id="status" class="status" style="visibility: collapse">
     Temperature: <span id="temp">...</span> Cº,
     Humidity: <span id=hum>...</span>%,
-    Sent latency: <span id="lat">...</span> sec
+    Send latency: <span id="lat">...</span> ms
 </p>
 <div id="settings" style="visibility: collapse"></div>
 <div id="actions" style="visibility: collapse">
