- Implemented schedule mode - Skip message "Warming up..." if data already available

--- a/html/index.html
+++ b/html/index.html
@@ -175,7 +175,7 @@
             "s_brt": "Brightness, (0-15)",
             "snd": "Sound indication",
             "f_freq": "PWM frequency",
-            "f_mode": "Mode (0 - PWM, WINDOW, ON, OFF - 3)",
+            "f_mode": "Mode (0 - PWM, WINDOW, SCHEDULE, ON, OFF - 4)",
             "f_sensor": "Sensor (0 - TEMP, HUM, CO2 - 2)",
             "f_min_d": "Min Duty value (0-1)",
             "f_max_d": "Max Duty value (0-1)",
