--- a/html/index.html
+++ b/html/index.html
@@ -51,6 +51,7 @@
             display: block;
             width: 60vw;
             max-width: 20rem;
+            box-sizing: content-box;
             background-color: #3498db;
             border: none;
             color: #fff;
@@ -60,6 +61,11 @@
             text-align: center;
             cursor: pointer;
             border-radius: .25rem
+        }
+
+        select.input {
+            appearance: none;
+            text-align-last: center;
         }
 
         .button[disabled] {
@@ -175,8 +181,8 @@
             "s_brt": "Brightness, (0-15)",
             "snd": "Sound indication",
             "f_freq": "PWM frequency",
-            "f_mode": "Mode (0 - PWM, WINDOW, SCHEDULE, ON, OFF - 4)",
-            "f_sensor": "Sensor (0 - TEMP, HUM, CO2 - 2)",
+            "f_mode": "Mode",
+            "f_sensor": "Sensor",
             "f_min_d": "Min Duty value (0-1)",
             "f_max_d": "Max Duty value (0-1)",
             "f_min_v": "Min Sensor value",
@@ -191,6 +197,17 @@
             "int": "Alert interval, ms",
             "min": "Min value",
             "max": "Max value",
+        }
+
+        const SettingsKeyConfig = {
+            "f_mode": {
+                type: "select",
+                options: ["PWM", "Window", "Schedule", "Always on", "Always off"]
+            },
+            "f_sensor": {
+                type: "select",
+                options: ["Temperature", "Humidity", "CO2"]
+            },
         }
 
         function _createSection(parent, section, obj, title = null) {
@@ -221,11 +238,30 @@
             title.innerText = SettingsMap[key.split(".").reverse()[0]];
 
             let control;
-            if (typeof value === "boolean") {
+            const type = SettingsKeyConfig[key]?.type;
+            if (type === "trigger" || (!type && typeof value === "boolean")) {
                 control = document.createElement("a");
                 control.classList.add("button");
                 control.setAttribute("data-key", key);
                 control.onclick = () => updateValue(control, (control.getAttribute("data-value") === "true") ? 0 : 1);
+            } else if (type === "select") {
+                control = document.createElement("select");
+                control.classList.add("input");
+                const dOpt = document.createElement("option");
+                dOpt.innerText = "...";
+                dOpt.setAttribute("hidden", "");
+                dOpt.setAttribute("disabled", "");
+                control.appendChild(dOpt);
+
+                for (let i = 0; i < SettingsKeyConfig[key].options.length; i++) {
+                    const opt = document.createElement("option");
+                    opt.value = i.toString();
+                    opt.innerText = SettingsKeyConfig[key].options[i];
+                    control.appendChild(opt);
+                }
+
+                control.value = value
+                control.onchange = () => updateValue(control, control.value);
             } else {
                 control = document.createElement("input");
                 control.classList.add("input");
