--- a/html/index.html
+++ b/html/index.html
@@ -454,7 +454,7 @@
 
 <p id="extra" class="status" style="visibility: collapse">
     Uptime: <span id="uptime">...</span>,
-    WiFi: <span id="wifi">...</span> dB
+    WiFi: <span id="wifi">...</span> dB,
     Settings: <span id="config_p">...</span>
 </p>
 </body>
