Add activation offset for schedules

--- a/html/index.html
+++ b/html/index.html
@@ -191,6 +191,7 @@
             "max_v": "Max Sensor value",
             "max_act_time": "Max active time, s",
             "act_time_w": "Active time window, s",
+            "act_offset": "Activation offset, s",
             "alert_temp": "Alert Temperature, Cº",
             "alert_co2": "Alert CO2, ppm",
             "alert_hum": "Alert Humidity, %",
